# news-hub-aggregator

./: .gitignore  .pre-commit-config.yaml  README.md  gitignore  news_links_markdown.py  pyproject.toml
docs/: ARCHITECTURE_GUIDE.md  CODE_REVIEW_GUIDE.md  CONFIGURATION_GUIDE.md  GEOPOLITICAL_LEDGER_PROMPT_GUIDE.md  GLOBAL_BRIEFING_PROMPT_GUIDE.md  INTEL_BRIEF_PROMPT_GUIDE.md  MAINSTREAM_NEWS_ANALYSIS_PROMPT_GUIDE.md  MANUAL_QC_GUIDE.md  MATERIALIST_ANALYSIS_PROMPT_GUIDE.md  MULTI_LENS_ANALYSIS_PROMPT_GUIDE.md  TESTING_GUIDE.md  content-to-intelligence-pipeline-wip.md
legacy/: constants.py  news_post.py  news_research.py
scripts/: generate_context.py  validate_config.py
src/: config_processor.py  content_summariser.py  content_summarizer.py  global_news_aggregator.py  headline_synthesizer.py  historical_materialist_researcher.py  link_collector.py  main.py  main_content_summarization.py  main_gpe_regional_briefing.py  main_news_post.py  main_regional_briefing.py  markdown_generator.py  region_categoriser.py  regional_summariser.py
src/consolidators/: analysis_headline_consolidator.py  mainstream_headline_consolidator.py
src/generators/: geopolitical_ledger_generator.py  intel_brief_generator.py  materialist_analysis_generator.py
src/interfaces/: __init__.py  consolidator.py  generator.py  models.py  orchestrator.py  synthesizer.py
src/legacy_modules/: config_manager.py  content_extractor.py  content_summarizer.py  csv_handler.py  global_news_aggregator.py  link_collector.py  (+9 more)
test/: conftest.py  test_region_categoriser.py  test_youtube_transcript_handler.py
(+28 files in other folders)
